Adding the tags function

--- a/wp-content/themes/wordpress101/css/main.css
+++ b/wp-content/themes/wordpress101/css/main.css
@@ -1,3 +1,11 @@
+/* Start Styling Main Content Section */
+
+.main-content {
+	margin-bottom: 65px;
+}
+
+/* End Styling Main Content Section */
+
 /* Start Styling Footer Section */
 
 .footer {
